# universe-cli

./: .gitignore  Cargo.toml  LICENSE.txt  flake.nix  pkgs.nix  readme.md
src/: helpers.rs  main.rs  misc.rs  rebuild.rs  run.rs  update.rs
src/helpers/: flake_root.rs  nix_command.rs
